Mon Jun 02 12:47:50 2003  Nanbor Wang  <nanbor@cs.wustl.edu>

	* README: Revised the root readme file.

Mon Jun  2 12:42:10 2003  Jeff Parsons <j.parsons@vanderbilt.edu>

        * CCF/External/Utility/Documentation/Build.html:

          New file containing build information for the CIDL compiler.

        * CIDLC/README:

          Updated file to point to the new file above and other
          documentation files in that same directory.

Mon Jun  2 02:00:04 2003  Jeff Parsons <j.parsons@vanderbilt.edu>

        * examples/OEP/BasicSP/BasicSP.dsw:
        * examples/OEP/BasicSP/BasicSP_stub.dsp:
        * examples/OEP/BasicSP/BasicSP_svnt.dsp:
        * examples/OEP/BasicSP/BMClosedED/BMClosedED_exec.dsp:
        * examples/OEP/BasicSP/BMClosedED/BMClosedED_stub.dsp:
        * examples/OEP/BasicSP/BMClosedED/BMClosedED_svnt.dsp:
        * examples/OEP/BasicSP/BMDevice/BMDevice_exec.dsp:
        * examples/OEP/BasicSP/BMDevice/BMDevice_stub.dsp:
        * examples/OEP/BasicSP/BMDevice/BMDevice_svnt.dsp:
        * examples/OEP/BasicSP/BMDisplay/BMDisplay_exec.dsp:
        * examples/OEP/BasicSP/BMDisplay/BMDisplay_stub.dsp:
        * examples/OEP/BasicSP/BMDisplay/BMDisplay_svnt.dsp:
        * examples/OEP/BasicSP/EC/EC_client.dsp:
        * examples/OEP/BasicSP/EC/EC_exec.dsp:
        * examples/OEP/BasicSP/EC/EC_stub.dsp:
        * examples/OEP/BasicSP/EC/EC_svnt.dsp:
        * examples/OEP/BasicSP/EC/controller.dsp:
        * examples/OEP/Display/Display.dsw:
        * examples/OEP/Display/HUDisplay_stub.dsp:
        * examples/OEP/Display/HUDisplay_svnt.dsp:
        * examples/OEP/Display/GPS/GPS_exec.dsp:
        * examples/OEP/Display/GPS/GPS_stub.dsp:
        * examples/OEP/Display/GPS/GPS_svnt.dsp:
        * examples/OEP/Display/GPS/GPS_tracing_exec.dsp:
        * examples/OEP/Display/NavDisplay/NavDisplay_exec.dsp:
        * examples/OEP/Display/NavDisplay/NavDisplay_stub.dsp:
        * examples/OEP/Display/NavDisplay/NavDisplay_svnt.dsp: